<resources>
    <string name="app_name">HS Card Explorer</string>

    <!-- HomeScreen values-->
    <string name="button_text__home_screen_browse_cards">Browse Cards</string>
    <string name="carousel_left_image_descr">left image</string>
    <string name="carousel_left_reserve_image_descr">reserved left image</string>
    <string name="carousel_center_image_descr">center image</string>
    <string name="carousel_right_image_descr">right image</string>
    <string name="carousel_right_reserve_image_descr">reserved right image</string>
    <string name="find_hint">Find...</string>

</resources>
