<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:baselineAligned="false"
              android:orientation="horizontal">

    <FrameLayout
        android:id="@+id/carousel_left_reserve_container"
        android:layout_width="0dp"
        android:layout_height="0dp">

        <ImageView
            android:id="@+id/carousel_left_reserve_image"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/carousel_left_reserve_image_descr"/>

    </FrameLayout>

    <FrameLayout
        android:id="@+id/carousel_left_container"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:clickable="true">

        <ImageView
            android:id="@+id/carousel_left_image"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/carousel_left_image_descr"/>

    </FrameLayout>

    <FrameLayout
        android:id="@+id/carousel_center_container"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="2"
        android:clickable="true">

        <ImageView
            android:id="@+id/carousel_center_image"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/carousel_center_image_descr"/>

    </FrameLayout>


    <FrameLayout
        android:id="@+id/carousel_right_container"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:clickable="true">

        <ImageView
            android:id="@+id/carousel_right_image"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/carousel_right_image_descr"/>

    </FrameLayout>

    <FrameLayout
        android:id="@+id/carousel_right_reserve_container"
        android:layout_width="0dp"
        android:layout_height="0dp">

        <ImageView
            android:id="@+id/carousel_right_reserve_image"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/carousel_right_reserve_image_descr"/>

    </FrameLayout>


</LinearLayout>